--- a/add.html
+++ b/add.html
@@ -15,10 +15,14 @@
     </form>
 
     <script>
+        const electron = require('electron');
+        const { ipcRenderer } = electron;
+
         document.querySelector('form').addEventListener('submit', (event) => {
             event.preventDefault();
 
-            debugger;
+            const { value } = document.querySelector('input');
+            ipcRenderer.send('todoadd', value);
         });
     </script>
 </body>
